Added About text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,6 +13,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was built by {{name}}. It uses data from mapbox.com and weatherstack.com !</p>
         <img src="./img/me.jpg" class="potrait" />
     </div>
     {{>footer}}
