--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -22,6 +22,7 @@
 
         <p id="msg1"></p>
         <p id="msg2"></p>
+        <p id="lastSeen"></p>
     </div>
     {{>footer}}
     <script src="./js/app.js"></script>
