--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -6,7 +6,7 @@
     <link rel="icon" href="/img/title-icon.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>404 - Page Not Found</title>
 </head>
 
