Updated Final POC Changes

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -23,6 +23,17 @@
         <p id="msg1"></p>
         <p id="msg2"></p>
         <p id="lastSeen"></p>
+
+        <p>
+            Here are a few things you need to know about this app: 
+            <ol>
+                <li>Its code is available on Github.</li>
+                <li>Its deployed on Heroku.</li>
+                <li>CI/CD takes place using Jenkins Pipeline, which is running
+                     on docker and deployed on GCP.</li>
+            </ol>
+
+        </p>
     </div>
     {{>footer}}
     <script src="./js/app.js"></script>
